c4prj2_input/grade.txt
Grading at Mon Apr  1 23:50:22 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘deck_from_string’:
input.c:86:19: error: implicit declaration of function ‘make_empty_deck’ [-Werror=implicit-function-declaration]
   deck_t * deck = make_empty_deck();
                   ^
input.c:86:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
input.c: In function ‘hand_from_string’:
input.c:147:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
   deck_t * deck = make_empty_deck();
                   ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
